--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@types/markdown-it": "^14.1.2",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "docx": "^9.1.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
+    "markdown-it": "^14.1.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
