--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.18.0",
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.469.0",
     "markdown-it": "^14.1.0",
     "next": "15.1.2",
+    "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
